<resources>
    <string name="app_name">EstsharaBot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ChatBotError">Sorry, something went wrong and the app was unable to complete your request. Please try again later or contact support if the problem persists.</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="chat_history">Chat\nHistory</string>
    <string name="upload_image">Upload\nImage</string>
    <string name="my_profile">My\nProfile</string>
    <string name="report_history">Report\nHistory</string>
    <string name="report_caution">Please note that the results provided by this app are generated by an AI model and should be used for informational purposes only.</string>
    <string name="caution">Caution:</string>
    <string name="type_a_message">Type a message</string>
</resources>